--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <body>
 <div class="container" id="container">
 	<div class="form-container sign-in-container">
-		<form action="#">
+		<form action="#" method="POST">
 			<h1>Sign in</h1>
 			<input name="username" type="username" id="username" class="form__input" autocomplete="off" placeholder=" " >
-            <label for="email" class="form__label">Username</label>
+            <label for="username" class="form__label">Username</label>
 			<input name="password" type="password" id="password" class="form2__input" autocomplete="off" placeholder=" " >
-          <label for="email" class="form2__label">Password</label>
-			<a href="#">Forgot your password?</a>
+          <label for="password" class="form2__label">Password</label>
 			<button type="submit" class="signIn">Sign In</button>
 		</form>
 	</div>
