--- a/pages/hudpopup.html
+++ b/pages/hudpopup.html
@@ -35,6 +35,6 @@
 
 
     <script src="http://smoothiecharts.org/smoothie.js"></script>
-    <script src="../scripts/interface.js"></script>
+    <script src="{{ url_for('static', filename='js/interface.js') }}"></script>
 </body>
 </html>
